# cvpr-vand-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  RULES.md  pyproject.toml  run.sh  zizmor.yml
.github/workflows/: evaluate.yaml  publish.yaml
.platform/: DOCKERFILE  README.md  docker-compose.yaml
.platform/merge/: README.md  pyproject.toml
.platform/merge/src/merge/: main.py
.platform/static/: index.html  script.js  style.css
eval/: README.md  pyproject.toml
eval/src/eval/: evaluate.py
src/eval/: evaluate.py  utils.py
src/eval/submission/: README.md  __init__.py  model.py  modules.py  prompt_ensemble.py
src/eval/submission/memory_bank/: image_weights.pkl  statistic_scores.pkl  statistic_scores_mean.pkl
src/eval/submission/memory_bank526/: image_weights_new.pkl  statistic_scores526.pkl  statistic_scores526_mean.pkl
src/eval/submission/open_clip_local/: factory.py  transformer.py
src/eval/submission/qkv_open_clip/: model.py
src/eval/submission/utils/: VPB.py  comad_utils.py  crf.py  filter_algorithm.py  tool.py  utils_area.py
src/eval/submission/utils/pydensecrf-1.0rc3.dist-info/: METADATA  RECORD  direct_url.json
