[project]
name = "vand2025_eval"
version = "0.1.0"
description = "VAND 2025 evaluation script"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "anomalib[full]",
    "scikit-learn",
    # TODO: Add your additional dependencies here
    "kmeans-pytorch==0.3",
    "accelerate"
]

[tool.uv.sources]
anomalib = { git = "https://github.com/openvinotoolkit/anomalib.git", branch = "main" }


[tool.hatch.build.targets.wheel]
packages = ["src/eval"]

[project.scripts]
eval = "eval.evaluate:eval"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["eval"]

