[project]
name = "merge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas"]

[tool.hatch.build.targets.wheel]
packages = ["src/merge"]

[project.scripts]
merge = "merge.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"